# snapdiff

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
snapdiff/: cli.py
tests/: test_cli.py
