[project]
name = "snapdiff"
version = "0.1.0"
description = "Snapshot and diff any directory tree over time."
requires-python = ">=3.8"
authors = [{ name = "Your Name" }]

[project.scripts]
snapdiff = "snapdiff.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"